# train-agent

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md
backend/: .env.example  debug-queries.sql  langgraph.json  pyproject.toml
backend/scripts/: inspect_chunks.py  parse_pptx.py  test_vision_agent.py
backend/skills/narration/: SKILL.md
backend/skills/ppt/: SKILL.md  SKILL.zh-CN.md
backend/src/: app_context.py  exceptions.py  limits.py
backend/src/agent/: graph.py  message_history.py  prompt_manager.py  skill_manager.py  state.py  summarization.py
backend/src/api/: deps.py  routes.py
backend/src/managers/: doc_manager.py  prompt_manager.py  skill_manager.py  style_extract_manager.py  tts_manager.py
backend/src/middlewares/: __init__.py  context_inject_middleware.py  inject_doc_context.py  logging_middlewares.py  model_message_sanitizer.py  summarization.py
backend/src/parsers/: __init__.py  base.py  docx_parser.py  markdown_parser.py  pdf_parser.py
backend/src/services/: doc_service.py  tts_service.py
backend/src/storage/: database.py  file_store.py  providers.py  seeds.py  vector_store.py
backend/src/tools/: __init__.py  clarify_form.py  get_ppt_detail.py  get_style_template.py  load_skill.py  rag_search.py  run_skill_script.py  save_narration.py  save_output.py  save_ppt.py  terminal_tool.py
backend/static/: ppt-assets  ppt-templates
backend/static/ppt-styles/: 04-dark-botanical.html  05-notebook-tabs.html  (+10 more)
backend/tests/: test_message_history.py  test_message_history_callback.py  test_skill_manager.py  test_summarization_middleware.py
(+256 files in other folders)
